<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSettingBg"
    tools:context="com.leanderli.dev.cardlauncherpro.WallpaperSizeSettingActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_title_bar"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardElevation="@dimen/card_elevation_5dip"
        app:cardBackgroundColor="@color/neteaseRed"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:id="@+id/rel_back"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_arrow_back_white_18dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

            </RelativeLayout>

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/activity_wallpaper_size_setting"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_custom_title_bar"
                android:textStyle="bold" />

            <RelativeLayout
                android:visibility="invisible"
                android:id="@+id/rel_save_size"
                android:background="?attr/selectableItemBackground"
                android:layout_alignParentEnd="true"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:src="@drawable/ic_save_white_24dp"
                    android:layout_centerInParent="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_below="@id/cv_title_bar"
        android:layout_margin="@dimen/margin_10dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/margin_10dip"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/card_radius_5dip"
            android:id="@+id/cv_customize_wallpaper_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_pannel_height">

                <TextView
                    android:id="@+id/tv_customize_size"
                    android:textSize="@dimen/font_size_16sp"
                    android:layout_marginLeft="@dimen/margin_20dip"
                    android:text="自定义大小"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:cursorVisible="false"
                    android:id="@+id/et_customize_size"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_10dip"
                    android:layout_toEndOf="@id/tv_customize_size"
                    android:background="@null"
                    android:layout_marginRight="@dimen/margin_10dip"
                    android:textSize="@dimen/font_size_16sp"
                    android:hint="键入值"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <Switch
                    android:id="@+id/sv_use_customize_size"
                    android:layout_marginRight="@dimen/margin_10dip"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:textColor="@color/colorSettingHint"
            android:text="TexView"
            android:layout_marginRight="@dimen/margin_20dip"
            android:layout_marginLeft="@dimen/margin_20dip"
            android:layout_below="@id/cv_customize_wallpaper_size"
            android:id="@+id/tv_device_size_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.CardView
            android:layout_below="@id/tv_device_size_hint"
            android:id="@+id/cv_wallpaper_size"
            android:layout_marginTop="@dimen/margin_10dip"
            app:cardCornerRadius="@dimen/card_radius_5dip"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:background="@drawable/layer_list"
                    android:id="@+id/rel_wallpaper_size_01"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_pannel_height">

                    <TextView
                        android:textSize="@dimen/font_size_16sp"
                        android:layout_marginLeft="@dimen/margin_20dip"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/wallpaper_size_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_alignParentRight="true">

                        <ImageView
                            android:visibility="invisible"
                            android:id="@+id/iv_default"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_check_grey600_18dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:background="@drawable/layer_list"
                    android:layout_below="@id/rel_wallpaper_size_01"
                    android:id="@+id/rel_wallpaper_size_02"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_pannel_height">

                    <TextView
                        android:textSize="@dimen/font_size_16sp"
                        android:layout_marginLeft="@dimen/margin_20dip"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/wallpaper_size_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_alignParentRight="true">

                        <ImageView
                            android:id="@+id/iv_medium"
                            android:visibility="invisible"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_check_grey600_18dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />

                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:background="@drawable/layer_list"
                    android:layout_below="@id/rel_wallpaper_size_02"
                    android:id="@+id/rel_wallpaper_size_03"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_pannel_height">

                    <TextView
                        android:textSize="@dimen/font_size_16sp"
                        android:layout_marginLeft="@dimen/margin_20dip"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/wallpaper_size_exlarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_alignParentRight="true">

                        <ImageView
                            android:id="@+id/iv_exlarge"
                            android:visibility="invisible"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_check_grey600_18dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />

                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@id/rel_wallpaper_size_03"
                    android:id="@+id/rel_wallpaper_size_04"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_pannel_height">

                    <TextView
                        android:textSize="@dimen/font_size_16sp"
                        android:layout_marginLeft="@dimen/margin_20dip"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/wallpaper_size_fullscreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_alignParentRight="true">

                        <ImageView
                            android:id="@+id/iv_fullscreen"
                            android:visibility="invisible"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_check_grey600_18dp"
                            android:layout_width="25dp"
                            android:layout_height="25dp" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:visibility="invisible"
                    android:id="@+id/rel_disabled_hint"
                    android:layout_centerInParent="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_centerHorizontal="true"
                        android:id="@+id/iv_warning"
                        android:src="@drawable/ic_error_red_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:textSize="@dimen/font_size_16sp"
                        android:layout_marginTop="@dimen/margin_5dip"
                        android:layout_below="@+id/iv_warning"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/neteaseRed"
                        android:text="使用了自定义大小，选择功能已停用"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:text="@string/wallpaper_size_setting_hint"
            android:textColor="@color/colorSettingHint"
            android:layout_marginRight="@dimen/margin_20dip"
            android:layout_marginLeft="@dimen/margin_20dip"
            android:layout_below="@id/cv_wallpaper_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
