<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSettingBg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_title_bar"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardElevation="@dimen/card_elevation_5dip"
        app:cardBackgroundColor="@color/neteaseRed"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:background="?attr/selectableItemBackground"
                android:id="@+id/rel_back"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_arrow_back_white_18dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp" />

            </RelativeLayout>

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/activity_settings_title_bar_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_custom_title_bar"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_below="@id/cv_title_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_margin="@dimen/margin_10dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_marginTop="@dimen/margin_10dip"
                    android:id="@+id/cv_home_setting"
                    app:cardCornerRadius="@dimen/card_radius_5dip"
                    app:cardUseCompatPadding="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:background="@drawable/layer_list"
                            android:id="@+id/rel_home_settings_001"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/setting_pannel_height">

                            <ImageView
                                android:id="@+id/ic_now_wallpaper_grey600_18dp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_now_wallpaper_grey600_18dp"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentLeft="true" />

                            <TextView
                                android:layout_toEndOf="@id/ic_now_wallpaper_grey600_18dp"
                                android:textSize="@dimen/font_size_16sp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_centerInParent="true"
                                android:text="@string/home_wallpaper_background_setting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/ic_now_wallpaper_grey600_18dp" />

                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/setting_item_arrow_normal"
                                android:layout_centerInParent="true"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_below="@id/rel_home_settings_001"
                            android:background="@drawable/layer_list"
                            android:id="@+id/rel_home_settings_003"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/setting_pannel_height">

                            <ImageView
                                android:id="@+id/ic_phone_android_grey600_18dp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_phone_android_grey600_18dp"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentLeft="true" />

                            <TextView
                                android:layout_toEndOf="@id/ic_phone_android_grey600_18dp"
                                android:textSize="@dimen/font_size_16sp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_centerInParent="true"
                                android:text="@string/home_icon_display_setting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/ic_phone_android_grey600_18dp" />

                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/setting_item_arrow_normal"
                                android:layout_centerInParent="true"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:background="@drawable/layer_list"
                            android:id="@+id/rel_home_settings_002"
                            android:layout_below="@id/rel_home_settings_003"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/setting_pannel_height">

                            <ImageView
                                android:id="@+id/ic_filter_list_grey600_18dp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_filter_list_grey600_18dp"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentLeft="true" />

                            <TextView
                                android:layout_toEndOf="@id/ic_filter_list_grey600_18dp"
                                android:textSize="@dimen/font_size_16sp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_centerInParent="true"
                                android:text="@string/app_group_setting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/ic_filter_list_grey600_18dp" />

                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/setting_item_arrow_normal"
                                android:layout_centerInParent="true"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true" />

                        </RelativeLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    app:cardCornerRadius="@dimen/card_radius_5dip"
                    android:id="@+id/cv_app_list_setting"
                    android:layout_below="@id/cv_home_setting"
                    app:cardUseCompatPadding="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardPreventCornerOverlap="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:background="?attr/selectableItemBackground"
                            android:id="@+id/rel_app_list_setting_001"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/setting_pannel_height">

                            <ImageView
                                android:id="@+id/ic_format_list_bulleted_grey600_18dp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_format_list_bulleted_grey600_18dp"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentLeft="true" />

                            <TextView
                                android:layout_toEndOf="@id/ic_format_list_bulleted_grey600_18dp"
                                android:textSize="@dimen/font_size_16sp"
                                android:layout_marginLeft="@dimen/margin_10dip"
                                android:layout_centerInParent="true"
                                android:text="@string/app_list_setting"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toRightOf="@id/ic_format_list_bulleted_grey600_18dp" />

                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:src="@drawable/setting_item_arrow_normal"
                                android:layout_centerInParent="true"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true" />

                        </RelativeLayout>

                        <Button
                            android:visibility="gone"
                            android:onClick="openTest"
                            android:layout_centerInParent="true"
                            android:text="test"
                            android:layout_below="@id/rel_app_list_setting_001"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>